Next release
============

* FIX: Bug in XFibres5 (https://github.com/nipy/nipype/pull/1168)
* ENH: Attempt to use hard links for data sink.
    (https://github.com/nipy/nipype/pull/1161)
* FIX: Updates to SGE Plugins
    (https://github.com/nipy/nipype/pull/1129)
* ENH: Add ants JointFusion() node with testing
    (https://github.com/nipy/nipype/pull/1160)
* ENH: Add --float option for antsRegistration calls
    (https://github.com/nipy/nipype/pull/1159)
* ENH: Added interface to simulate DWIs using the multi-tensor model
       (https://github.com/nipy/nipype/pull/1085)
* ENH: New interface for FSL fslcpgeom utility (https://github.com/nipy/nipype/pull/1152)
* ENH: Added SLURMGraph plugin for submitting jobs to SLURM with dependencies (https://github.com/nipy/nipype/pull/1136)
* FIX: Enable absolute path definitions in DCMStack (https://github.com/nipy/nipype/pull/1089,
       replaced by https://github.com/nipy/nipype/pull/1093)
* ENH: New mesh.MeshWarpMaths to operate on surface-defined warpings
       (https://github.com/nipy/nipype/pull/1016)
* FIX: Refactor P2PDistance, change name to ComputeMeshWarp, add regression tests,
       fix bug in area weighted distance, and added optimizations
       (https://github.com/nipy/nipype/pull/1016)
* ENH: Add an option not to resubmit Nodes that finished running when using SGEGraph (https://github.com/nipy/nipype/pull/1002)
* FIX: FUGUE is now properly listing outputs. (https://github.com/nipy/nipype/pull/978)
* ENH: Improved FieldMap-Based (FMB) workflow for correction of susceptibility distortions in EPI seqs.
       (https://github.com/nipy/nipype/pull/1019)
* FIX: In the FSLXcommand _list_outputs function fixed for loop range (https://github.com/nipy/nipype/pull/1071)
* ENH: Dropped support for now 7 years old Python 2.6 (https://github.com/nipy/nipype/pull/1069)
* FIX: terminal_output is not mandatory anymore (https://github.com/nipy/nipype/pull/1070)